# swc-upload/app.js
@@ -5,8 +5,10 @@ var cors = require('cors');
 var SwaggerUi = require('swagger-tools/middleware/swagger-ui');
 var multer  = require('multer');
 var db = require('./models/index');
+var bodyParser = require('body-parser');
+var express = require('express');
 
-var app = require('express')();
+var app = express();
 
 module.exports = app; // for testing
 
@@ -14,7 +16,13 @@ var config = {
   appRoot: __dirname // required config
 };
 
-app.use(multer({dest:'./uploads/'}).single('contents'));
+app.use('/', express.static(__dirname + '/static'));
+
+app.use('/style/bootstrap', express.static(__dirname + '/bower_components/bootstrap/dist/css'));
+app.use('/script/bootstrap', express.static(__dirname + '/bower_components/bootstrap/dist/js'));
+app.use('/script/jquery', express.static(__dirname + '/bower_components/jquery/dist'));
+
+app.use(multer({dest:'./uploads/', includeEmptyFields: true}).single('contents'));
 
 SwaggerExpress.create(config, function(err, swaggerExpress) {
   if (err) { throw err; }
@@ -24,33 +32,12 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   // install middleware
   swaggerExpress.register(app);
   
-  var port = process.env.PORT || 3000;
+  var port = process.env.PORT || 9651;
   app.listen(port);
 
   if (swaggerExpress.runner.swagger.paths['/files']) {
     console.log('try this:\ncurl http://127.0.0.1:' + port + '/files');
   }
-});
-
-// Swagger will advertise this endpoint, but override to handle the file delivered by multer.
-app.post('/api/v1/upload', function(req, res, next){
-  //console.log(req);
-  console.log(req.file.mimetype);
-  console.log('Would remove ' + req.file.path);
-  res.send('Done');
-  
-  var fs = require('fs'), byline = require('byline');
-
-  var stream = byline(fs.createReadStream(req.file.path, { encoding: 'utf8' }));
-  
-  var samples = [];
-  
-  //var swcFile = 
-  
-  stream.on('data', function(line) {
-    var res = line.trim().split(' ');
-    console.log(res);
-  });
 });
 
 db.sequelize.sync();
